--- a/index.html
+++ b/index.html
@@ -236,37 +236,45 @@
               <div class="title" data-localize="header.team">Team</div>
               <hr>
             </div>
-            <div class="col-md-3 member text-center">
-              <div class="avatar">
-                <div class="layer" role="button" data-toggle="modal" data-target="#modal_1"></div>
-                <img src="assets/images/team/jingjing_ma.jpg" alt="" class="img-thumbnail">
+            <div class="col-md-3">
+              <div class="member">
+                <div class="avatar">
+                  <div class="layer" role="button" data-toggle="modal" data-target="#modal_1"></div>
+                  <img src="assets/images/team/jingjing_ma.jpg" alt="" class="img-thumbnail">
+                </div>
+                <div class="name" data-localize="team.names.first"></div>
+                <div class="position" data-localize="team.positions.first"></div>
               </div>
-              <div class="name" data-localize="team.names.first"></div>
-              <div class="position" data-localize="team.positions.first"></div>
             </div>
-            <div class="col-md-3 member">
-              <div class="avatar">
-                <div class="layer" role="button" data-toggle="modal" data-target="#modal_2"></div>
-                <img src="assets/images/team/ningjing_gao.jpg" alt="" class="img-thumbnail">
+            <div class="col-md-3">
+              <div class="member">
+                <div class="avatar">
+                  <div class="layer" role="button" data-toggle="modal" data-target="#modal_2"></div>
+                  <img src="assets/images/team/ningjing_gao.jpg" alt="" class="img-thumbnail">
+                </div>
+                <div class="name" data-localize="team.names.second"></div>
+                <div class="position" data-localize="team.positions.second"></div>
               </div>
-              <div class="name" data-localize="team.names.second"></div>
-              <div class="position" data-localize="team.positions.second"></div>
             </div>
-            <div class="col-md-3 member">
-              <div class="avatar">
-                <div class="layer" role="button" data-toggle="modal" data-target="#modal_3"></div>
-                <img src="assets/images/team/kathy_wong.jpg" alt="" class="img-thumbnail">
+            <div class="col-md-3">
+              <div class="member">
+                <div class="avatar">
+                  <div class="layer" role="button" data-toggle="modal" data-target="#modal_3"></div>
+                  <img src="assets/images/team/kathy_wong.jpg" alt="" class="img-thumbnail">
+                </div>
+                <div class="name" data-localize="team.names.third"></div>
+                <div class="position" data-localize="team.positions.third"></div>
               </div>
-              <div class="name" data-localize="team.names.third"></div>
-              <div class="position" data-localize="team.positions.third"></div>
             </div>
-            <div class="col-md-3 member">
-              <div class="avatar">
-                <div class="layer" role="button" data-toggle="modal" data-target="#modal_4"></div>
-                <img src="assets/images/team/zhiyan_yu.jpg" alt="" class="img-thumbnail">
+            <div class="col-md-3">
+              <div class="member">
+                <div class="avatar">
+                  <div class="layer" role="button" data-toggle="modal" data-target="#modal_4"></div>
+                  <img src="assets/images/team/zhiyan_yu.jpg" alt="" class="img-thumbnail">
+                </div>
+                <div class="name" data-localize="team.names.forth"></div>
+                <div class="position" data-localize="team.positions.forth"></div>
               </div>
-              <div class="name" data-localize="team.names.forth"></div>
-              <div class="position" data-localize="team.positions.forth"></div>
             </div>
           </div>
         </div>
@@ -286,7 +294,7 @@
             <p data-localize="team.descs.first"></p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" data-localize="team.button"></button>
           </div>
         </div>
       </div>
@@ -305,7 +313,7 @@
             <p data-localize="team.descs.second"></p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" data-localize="team.button"></button>
           </div>
         </div>
       </div>
@@ -324,7 +332,7 @@
             <p data-localize="team.descs.third"></p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" data-localize="team.button"></button>
           </div>
         </div>
       </div>
@@ -343,7 +351,7 @@
             <p data-localize="team.descs.forth"></p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" data-localize="team.button"></button>
           </div>
         </div>
       </div>
