--- a/index.html
+++ b/index.html
@@ -152,72 +152,72 @@
                 <div class="row">
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/gallery_1.jpg" data-lity data-lity-target="assets/images/gallery_1.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_1.jpg" data-lity data-lity-target="assets/images/gallery/gallery_1.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/gallery_2.jpg" data-lity data-lity-target="assets/images/gallery_2.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_2.jpg" data-lity data-lity-target="assets/images/gallery/gallery_2.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/gallery_3.jpg" data-lity data-lity-target="assets/images/gallery_3.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_3.jpg" data-lity data-lity-target="assets/images/gallery/gallery_3.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/gallery_4.jpg" data-lity data-lity-target="assets/images/gallery_4.jpg" class="w-100 up" alt="">
+                      <img src="assets/images/gallery/gallery_4.jpg" data-lity data-lity-target="assets/images/gallery/gallery_4.jpg" class="w-100 up" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/gallery_5.jpg" data-lity data-lity-target="assets/images/gallery_5.jpg" class="w-100 up" alt="">
+                      <img src="assets/images/gallery/gallery_5.jpg" data-lity data-lity-target="assets/images/gallery/gallery_5.jpg" class="w-100 up" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/gallery_6.jpg" data-lity data-lity-target="assets/images/gallery_6.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_6.jpg" data-lity data-lity-target="assets/images/gallery/gallery_6.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/gallery_7.jpg" data-lity data-lity-target="assets/images/gallery_7.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_7.jpg" data-lity data-lity-target="assets/images/gallery/gallery_7.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/gallery_8.jpg" data-lity data-lity-target="assets/images/gallery_8.jpg" class="w-100 up" alt="">
+                      <img src="assets/images/gallery/gallery_8.jpg" data-lity data-lity-target="assets/images/gallery/gallery_8.jpg" class="w-100 up" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/gallery_9.jpg" data-lity data-lity-target="assets/images/gallery_9.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_9.jpg" data-lity data-lity-target="assets/images/gallery/gallery_9.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/gallery_10.jpg" data-lity data-lity-target="assets/images/gallery_10.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_10.jpg" data-lity data-lity-target="assets/images/gallery/gallery_10.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/gallery_11.jpg" data-lity data-lity-target="assets/images/gallery_11.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_11.jpg" data-lity data-lity-target="assets/images/gallery/gallery_11.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/gallery_12.jpg" data-lity data-lity-target="assets/images/gallery_12.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_12.jpg" data-lity data-lity-target="assets/images/gallery/gallery_12.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/gallery_13.jpg" data-lity data-lity-target="assets/images/gallery_13.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_13.jpg" data-lity data-lity-target="assets/images/gallery/gallery_13.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/gallery_14.jpg" data-lity data-lity-target="assets/images/gallery_14.jpg" class="w-100" alt="">
+                      <img src="assets/images/gallery/gallery_14.jpg" data-lity data-lity-target="assets/images/gallery/gallery_14.jpg" class="w-100" alt="">
                     </div>
                   </div>
                 </div>
